--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,429 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0cf6c3cc-c7cb-4996-93bd-97e31e3a8aef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Abap</th>\n",
+       "      <th>Ada</th>\n",
+       "      <th>C/C++</th>\n",
+       "      <th>C#</th>\n",
+       "      <th>Cobol</th>\n",
+       "      <th>Dart</th>\n",
+       "      <th>Delphi/Pascal</th>\n",
+       "      <th>Go</th>\n",
+       "      <th>Groovy</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PHP</th>\n",
+       "      <th>Python</th>\n",
+       "      <th>R</th>\n",
+       "      <th>Ruby</th>\n",
+       "      <th>Rust</th>\n",
+       "      <th>Scala</th>\n",
+       "      <th>Swift</th>\n",
+       "      <th>TypeScript</th>\n",
+       "      <th>VBA</th>\n",
+       "      <th>Visual Basic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>July 2004</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>10.08</td>\n",
+       "      <td>4.71</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>2.53</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>8.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>August 2004</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>9.81</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.26</td>\n",
+       "      <td>2.64</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>8.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>September 2004</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>9.63</td>\n",
+       "      <td>5.06</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.49</td>\n",
+       "      <td>2.72</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>8.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>October 2004</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>9.50</td>\n",
+       "      <td>5.31</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.77</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.34</td>\n",
+       "      <td>2.92</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>8.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>November 2004</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>9.52</td>\n",
+       "      <td>5.24</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.43</td>\n",
+       "      <td>2.84</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>8.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>September 2021</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>6.68</td>\n",
+       "      <td>7.17</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.37</td>\n",
+       "      <td>30.11</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>0.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>October 2021</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>6.99</td>\n",
+       "      <td>7.38</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.28</td>\n",
+       "      <td>30.14</td>\n",
+       "      <td>3.73</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>November 2021</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>6.99</td>\n",
+       "      <td>7.31</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>30.05</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>December 2021</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>7.01</td>\n",
+       "      <td>7.26</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.24</td>\n",
+       "      <td>29.60</td>\n",
+       "      <td>4.11</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>0.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210</th>\n",
+       "      <td>January 2022</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>7.40</td>\n",
+       "      <td>7.27</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.19</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.06</td>\n",
+       "      <td>28.74</td>\n",
+       "      <td>4.19</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>0.64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>211 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Date  Abap   Ada  C/C++    C#  Cobol  Dart  Delphi/Pascal  \\\n",
+       "0         July 2004  0.34  0.36  10.08  4.71   0.43  0.00           2.82   \n",
+       "1       August 2004  0.36  0.36   9.81  4.99   0.46  0.00           2.67   \n",
+       "2    September 2004  0.41  0.41   9.63  5.06   0.51  0.00           2.65   \n",
+       "3      October 2004  0.40  0.38   9.50  5.31   0.53  0.00           2.77   \n",
+       "4     November 2004  0.38  0.38   9.52  5.24   0.55  0.00           2.76   \n",
+       "..              ...   ...   ...    ...   ...    ...   ...            ...   \n",
+       "206  September 2021  0.50  0.55   6.68  7.17   0.35  0.58           0.00   \n",
+       "207    October 2021  0.53  0.57   6.99  7.38   0.33  0.55           0.00   \n",
+       "208   November 2021  0.61  0.70   6.99  7.31   0.35  0.61           0.00   \n",
+       "209   December 2021  0.70  0.67   7.01  7.26   0.33  0.65           0.00   \n",
+       "210    January 2022  0.66  0.75   7.40  7.27   0.30  0.72           0.00   \n",
+       "\n",
+       "       Go  Groovy  ...    PHP  Python     R  Ruby  Rust  Scala  Swift  \\\n",
+       "0    0.00    0.03  ...  18.75    2.53  0.39  0.33  0.08   0.03   0.00   \n",
+       "1    0.00    0.07  ...  19.26    2.64  0.41  0.40  0.09   0.03   0.00   \n",
+       "2    0.00    0.08  ...  19.49    2.72  0.40  0.41  0.10   0.03   0.00   \n",
+       "3    0.00    0.09  ...  19.34    2.92  0.42  0.46  0.11   0.04   0.00   \n",
+       "4    0.00    0.07  ...  19.43    2.84  0.41  0.45  0.13   0.04   0.00   \n",
+       "..    ...     ...  ...    ...     ...   ...   ...   ...    ...    ...   \n",
+       "206  1.57    0.47  ...   6.37   30.11  3.93  1.01  0.77   0.49   1.64   \n",
+       "207  1.54    0.52  ...   6.28   30.14  3.73  0.98  0.74   0.49   1.61   \n",
+       "208  1.42    0.52  ...   6.19   30.05  3.80  1.00  0.82   0.54   1.70   \n",
+       "209  1.35    0.49  ...   6.24   29.60  4.11  1.03  0.84   0.55   1.64   \n",
+       "210  1.19    0.48  ...   6.06   28.74  4.19  1.07  0.98   0.48   1.91   \n",
+       "\n",
+       "     TypeScript   VBA  Visual Basic  \n",
+       "0          0.00  1.44          8.56  \n",
+       "1          0.00  1.46          8.57  \n",
+       "2          0.00  1.55          8.41  \n",
+       "3          0.00  1.61          8.49  \n",
+       "4          0.00  1.50          8.24  \n",
+       "..          ...   ...           ...  \n",
+       "206        1.59  1.27          0.72  \n",
+       "207        1.59  1.28          0.75  \n",
+       "208        1.63  1.37          0.76  \n",
+       "209        1.66  1.25          0.71  \n",
+       "210        1.74  1.14          0.64  \n",
+       "\n",
+       "[211 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sb\n",
+    "\n",
+    "data = pd.read_csv('data.csv');\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d2760f7d-833b-40ce-a219-a7cb1542c089",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prog' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sb\u001b[38;5;241m.\u001b[39mregplot(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRuby\u001b[39m\u001b[38;5;124m'\u001b[39m,y\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJavaScript\u001b[39m\u001b[38;5;124m'\u001b[39m,data\u001b[38;5;241m=\u001b[39m\u001b[43mprog\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'prog' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sb.regplot(x='Ruby',y='JavaScript',data=prog)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
