Classification and modification of dir struct

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "0cf6c3cc-c7cb-4996-93bd-97e31e3a8aef",
    "metadata": {
     "tags": []
@@ -13,12 +13,12 @@
     "import pandas as pd\n",
     "import seaborn as sb\n",
     "\n",
-    "data = pd.read_csv('original_data.csv');"
+    "data = pd.read_csv('data/original_data.csv');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "9d3d4d8a-1305-4d26-b30b-25e0b9d73530",
    "metadata": {
     "tags": []
@@ -381,7 +381,7 @@
        "[211 rows x 30 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "395c66e9-6196-47e2-ba12-36419cc198c5",
    "metadata": {
     "tags": []
@@ -757,13 +757,13 @@
        "[211 rows x 30 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.to_csv('modified.csv', float_format='%.3f')\n",
+    "data.to_csv('data/temp/modified.csv', float_format='%.3f')\n",
     "\n",
     "data # should produce smaller decimal points"
    ]
