paper ~final as well as the code

--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "0cf6c3cc-c7cb-4996-93bd-97e31e3a8aef",
    "metadata": {
     "tags": []
@@ -19,17 +19,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "99da74fe",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter:  Dart\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "count    211.000000\n",
+       "mean       0.131754\n",
+       "std        0.173442\n",
+       "min        0.000000\n",
+       "25%        0.000000\n",
+       "50%        0.100000\n",
+       "75%        0.100000\n",
+       "max        0.700000\n",
+       "Name: Dart, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Testing block\n",
     "\n",
     "# prints the mean, median, mode, and other stat things.\n",
     "str = input(\"Enter: \")\n",
     "cut = data[str]\n",
-    "print(cut.describe())"
+    "cut.describe()"
    ]
   },
   {
@@ -319,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "df3539e8-fb0b-49b9-b993-015fcfd787dc",
    "metadata": {
     "tags": []
@@ -381,8 +409,39 @@
        "      <td>2.8</td>\n",
        "      <td>29.6</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>30.7</td>\n",
+       "      <td>18.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>30.1</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>30.1</td>\n",
+       "      <td>18.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>30.1</td>\n",
+       "      <td>17.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>29.6</td>\n",
+       "      <td>17.8</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>210 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -392,10 +451,18 @@
        "1          2.6  30.0\n",
        "2          2.7  29.7\n",
        "3          2.9  29.1\n",
-       "4          2.8  29.6"
+       "4          2.8  29.6\n",
+       "...        ...   ...\n",
+       "205       30.7  18.3\n",
+       "206       30.1  18.0\n",
+       "207       30.1  18.1\n",
+       "208       30.1  17.6\n",
+       "209       29.6  17.8\n",
+       "\n",
+       "[210 rows x 2 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +471,7 @@
     "data3 = data[['Months', 'Python', 'Java']]\n",
     "data3 = data3.set_index('Months')\n",
     "\n",
-    "data3.head()"
+    "data3.head(210)"
    ]
   },
   {
