code reformated before presentation

--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fa0d8fec-5bbf-4bfd-98aa-b7f2a5fa1f2f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Correlation\n",
+    "\n",
+    "In statistics, correlation or dependence is any statistical relationship, whether causal or not, between two random variables or bivariate data. Although in the broadest sense, \"correlation\" may indicate any type of association, in statistics it usually refers to the degree to which a pair of variables are linearly related. Familiar examples of dependent phenomena include the correlation between the height of parents and their offspring, and the correlation between the price of a good and the quantity the consumers are willing to purchase, as it is depicted in the so-called demand curve.\n",
+    "\n",
+    "Correlations are useful because they can indicate a predictive relationship that can be exploited in practice. For example, an electrical utility may produce less power on a mild day based on the correlation between electricity demand and weather. In this example, there is a causal relationship, because extreme weather causes people to use more electricity for heating or cooling. However, in general, the presence of a correlation is not sufficient to infer the presence of a causal relationship (i.e., correlation does not imply causation). \n",
+    "\n",
+    "In our analysis we have found that Java was the top language till April 2018, starting from July 2004. Then the top spot has been reserved by Python, till the end of our sample size. Seeing this we decided to run a comprehensive analysis of the correlation between python and Java. We have also included their correlation to other languages."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0cf6c3cc-c7cb-4996-93bd-97e31e3a8aef",
    "metadata": {
     "tags": []
@@ -14,58 +30,7 @@
     "import seaborn as sb\n",
     "\n",
     "data = pd.read_csv('data/original_data.csv');\n",
-    "data.to_csv('data/ad3.csv', float_format='%.3f')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "99da74fe",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter:  Dart\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "count    211.000000\n",
-       "mean       0.131754\n",
-       "std        0.173442\n",
-       "min        0.000000\n",
-       "25%        0.000000\n",
-       "50%        0.100000\n",
-       "75%        0.100000\n",
-       "max        0.700000\n",
-       "Name: Dart, dtype: float64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Testing block\n",
-    "\n",
-    "# prints the mean, median, mode, and other stat things.\n",
-    "str = input(\"Enter: \")\n",
-    "cut = data[str]\n",
-    "cut.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fa0d8fec-5bbf-4bfd-98aa-b7f2a5fa1f2f",
-   "metadata": {},
-   "source": [
-    "# Correlation"
+    "data.to_csv('data_ad4.csv', float_format='%.3f')\n"
    ]
   },
   {
@@ -504,21 +469,8 @@
     }
    ],
    "source": [
-    "# sb.lineplot(data = data3, x = 'Months', y = 'Java')\n",
-    "# sb.lineplot(data = data3, x = 'Months', y = 'Python')\n",
-    "sb.lineplot(data = data3)\n",
-    "\n",
-    "# sb.xlabel='Months'\n",
-    "# sb.ylabel='Python and Java'"
+    "sb.lineplot(data = data3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3585cdb9-99e5-4608-91e8-72a337414ab8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
