--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,7 @@
     "import seaborn as sb\n",
     "\n",
     "data = pd.read_csv('data/original_data.csv');\n",
-    "data.to_csv('data/temp/modified.csv', float_format='%.3f')"
+    "data.to_csv('data/temp_modified.csv', float_format='%.3f')"
    ]
   },
   {
