--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "0cf6c3cc-c7cb-4996-93bd-97e31e3a8aef",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
     "import seaborn as sb\n",
     "\n",
     "data = pd.read_csv('data/original_data.csv');\n",
-    "data.to_csv('data/temp_modified.csv', float_format='%.3f')"
+    "data.to_csv('temp/temp_modified.csv', float_format='%.3f')"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "c1063572-d659-4aa5-a38b-93f8b50b1701",
    "metadata": {
     "tags": []
@@ -43,7 +43,7 @@
        "<Axes: xlabel='Months', ylabel='JavaScript'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "d2760f7d-833b-40ce-a219-a7cb1542c089",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
        "<Axes: xlabel='Months', ylabel='Visual Basic'>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "5e116b94-44d7-4128-a9d5-8b48ccf8b12f",
    "metadata": {
     "tags": []
@@ -126,7 +126,7 @@
        "<Axes: xlabel='Months', ylabel='PHP'>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "c8da7c1c-6cb5-4d87-a3c6-0076670cde7f",
    "metadata": {
     "tags": []
@@ -159,7 +159,7 @@
        "<Axes: xlabel='Months', ylabel='Perl'>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "6a383769-331e-4ae8-971c-8204e187bd4b",
    "metadata": {
     "tags": []
@@ -192,7 +192,7 @@
        "<Axes: xlabel='Months', ylabel='Java'>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "e5d51a6b-b787-480b-9dc7-d53666cc11e3",
    "metadata": {
     "tags": []
@@ -237,7 +237,7 @@
        "<Axes: xlabel='Months', ylabel='Python'>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "id": "70ade768-c6ef-4faa-9767-fe89fa241549",
    "metadata": {
     "tags": []
@@ -291,7 +291,7 @@
        "<Axes: xlabel='Months', ylabel='VBA'>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "ab825bf2-ceb2-4175-9109-e9291199632d",
    "metadata": {
     "tags": []
@@ -324,7 +324,7 @@
        "<Axes: xlabel='Months', ylabel='Scala'>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "b837071f-b1b7-43b5-8a18-77d5eead46ce",
    "metadata": {
     "tags": []
@@ -357,7 +357,7 @@
        "<Axes: xlabel='Months', ylabel='Rust'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "id": "5692a9bd-1d06-4ead-9d1b-80c8fcbaade9",
    "metadata": {
     "tags": []
@@ -390,7 +390,7 @@
        "<Axes: xlabel='Months', ylabel='Lua'>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "id": "36cbb69d-91b4-4a69-b375-c7cd1745ce4e",
    "metadata": {
     "tags": []
@@ -423,7 +423,7 @@
        "<Axes: xlabel='Months', ylabel='Delphi/Pascal'>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "id": "b186548c-ba24-4837-8f27-62bb88cee82b",
    "metadata": {
     "tags": []
@@ -456,7 +456,7 @@
        "<Axes: xlabel='Months', ylabel='Cobol'>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "id": "2b48c206-6a1f-44bd-b54d-63975a66c712",
    "metadata": {
     "tags": []
@@ -489,7 +489,7 @@
        "<Axes: xlabel='Months', ylabel='Ada'>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "id": "33ca5138-c1e1-499b-a35b-b93b25e9f10c",
    "metadata": {
     "tags": []
@@ -522,7 +522,7 @@
        "<Axes: xlabel='Months', ylabel='Abap'>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "id": "8c8604c7-5a00-4329-b85f-43fb3480bfac",
    "metadata": {
     "tags": []
@@ -577,7 +577,7 @@
        "<Axes: xlabel='Months', ylabel='Swift'>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "id": "cdf94bdc-d426-4ef1-9599-174bb6cccf4b",
    "metadata": {
     "tags": []
@@ -610,7 +610,7 @@
        "<Axes: xlabel='Months', ylabel='Ruby'>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "id": "d18eca55-1679-4fb2-a875-88f89a92863d",
    "metadata": {
     "tags": []
@@ -643,7 +643,7 @@
        "<Axes: xlabel='Months', ylabel='Objective-C'>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "9bb0a263-2d9a-477d-97e6-3a7bcccd5624",
    "metadata": {
     "tags": []
@@ -676,7 +676,7 @@
        "<Axes: xlabel='Months', ylabel='Matlab'>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "id": "da80fcb7-dbb8-4f88-9439-08342936ab58",
    "metadata": {
     "tags": []
@@ -709,7 +709,7 @@
        "<Axes: xlabel='Months', ylabel='Kotlin'>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "id": "74045f42-beaa-4f2b-a32c-180190ee5eae",
    "metadata": {
     "tags": []
@@ -742,7 +742,7 @@
        "<Axes: xlabel='Months', ylabel='Julia'>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "id": "d4b6694c-0729-4e47-9826-3ad9c4b42f2a",
    "metadata": {
     "tags": []
@@ -775,7 +775,7 @@
        "<Axes: xlabel='Months', ylabel='Haskell'>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "id": "7023dc5a-b8cd-4912-990e-e4f8022c5c82",
    "metadata": {
     "tags": []
@@ -808,7 +808,7 @@
        "<Axes: xlabel='Months', ylabel='C#'>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "id": "a05c9aba-5a4d-4add-8a54-530fec1dc015",
    "metadata": {
     "tags": []
@@ -841,7 +841,7 @@
        "<Axes: xlabel='Months', ylabel='C/C++'>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "id": "085788ef-55dd-4c2e-b532-73380c1cf5bd",
    "metadata": {
     "tags": []
@@ -890,7 +890,7 @@
        "<Axes: xlabel='Months', ylabel='TypeScript'>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "id": "9da1d49f-3974-4b10-832c-f23e85a1ded9",
    "metadata": {
     "tags": []
@@ -923,7 +923,7 @@
        "<Axes: xlabel='Months', ylabel='R'>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "id": "d707787b-da0c-4954-ae3f-23d8d7b5b956",
    "metadata": {
     "tags": []
@@ -956,7 +956,7 @@
        "<Axes: xlabel='Months', ylabel='Groovy'>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "id": "bfc3150d-5f54-4b7d-b436-3a807bb9307a",
    "metadata": {
     "tags": []
@@ -989,7 +989,7 @@
        "<Axes: xlabel='Months', ylabel='Go'>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "id": "cc2659fa-d014-4bca-b397-3fabf6ee6755",
    "metadata": {
     "tags": []
@@ -1022,7 +1022,7 @@
        "<Axes: xlabel='Months', ylabel='Dart'>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
